yoshimi 1.6.0 M

2019-10-23 Will
* Further CLI test list revision.

2019-10-22 Will
* Instant (forced) exit also available from GUI.
  Hit ctrl with menu exit, just before with WM exit.
  This will not save any pending changes.

2019-10-21 Will
* Revised CLI lists for consistency.
* Added 'CMakeListsOLD.txt'
  Done in case of unexpected issues with merge
  from Iain -  cmake has a bad rep for that :(
* Forced CLI exit from Yoshimi returns 16 instead of 0

2019-10-18 Will
* BugFix: segfault changing scale name or description.
* Added instant close of all instances to CLI exit command.
* Improved CLI description for scale/keymap imports.
* Set bugfix release 1.6.0.2
  (includes Kristians oscillator fixes)

2019-10-16 Will
* Missing include in main.cpp when compiling headless.
* FLTK ref. in Misc/config.cpp when compiling headless.
* Changed CliFuncs readPartPeak to allow left/right.
  Not currently in use.

2019-10-15 Will
* Revised SubSynth and Oscillator Harmonics GUI.
  Central numbering and wider subsynth spacing.

2019-10-14 Will
* Ensure report to stdout when running headless.
* CLI can now save to banks slot.
* Revised instrument save to bank.
* Updated docs.
* Removed redundant labels in globals.h
* Corrected docs.
* Small revision to BankUI instrument control.
* Replaced all refs to "Simple Sound" and "No Title"
  with constants.

2019-10-12 Will
* CLI can now change bank instrument names.
* Revised GUI bank instrument names.
  Previously a rename performed a complete
  bank refetch. Now set the name in place.
* Corrected accidental variable name change.
* Revised example presets.
* Further small refinements to CLI.
  Also added comments to globals.h

2019-10-11 Will
* Minor corrections for headless build.

2019-9-26 Will
* Refined data2text to clarify structure.
* BugFix: CLI not selecting which kit item effect
  from the three part effects.
  It was changing the actual effect instead.

2019-9-25 Will
* Reverted cmake change from Iain